Indexing - Fields for Revision History traversal (#51)
* Draft of implementing rel_ fields for history graph.

* Implemented the indexing fields for revision history traversal.

* Handle move and copy independently.

* Implemented test cases to verify the relation fields.

* Addressed the review comments switching indentation to tabs and ensuring move and copy include rel_commit_previous.

* Revert "Addressed the review comments switching indentation to tabs and ensuring move and copy include rel_commit_previous."

This reverts commit 12e60221585c533d179c6a80c9ed5ea00b60b0a1.

* Reverted to using tabs and CRLF.

* Re-committed after modifying the global git settings to leave the line endings as is.

* Always fill _copy and _move.

* Extended the testHandleCommitPrevious test to check _copy and _move are filled.

* Removed the unnecessary line breaks.

* Added test coverage for master fields.

* Use lower commit revision for Master relations.

* The required API is now part of cms-item 3.2.0-SNAPSHOT.

* cms-item 3.2.0 is more strict in the CmsItemId format validation.

* Reasoning is that a history traversal that want to follow copy operations most likely also want to follow move.

---------

Co-authored-by: Thomas Åkesson <thomas.akesson@simonsoft.se>