@@ -56,7 +56,7 @@
 		<dependency>
 			<groupId>se.simonsoft</groupId>
 			<artifactId>cms-item</artifactId>
-			<version>3.1.4</version>
+			<version>3.2.0-SNAPSHOT</version>
 		</dependency>
 	
 		<dependency>
@@ -114,11 +114,11 @@
 		<dependency>
 			<groupId>se.simonsoft</groupId>
 			<artifactId>cms-backend-filexml</artifactId>
-			<version>0.21.2-SNAPSHOT</version>
+			<version>0.22.0-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	
+
 	<build>
 		<plugins>
 			<plugin>
@@ -126,7 +126,11 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${surefire-plugin.version}</version>
                 <configuration>
-                    <argLine>-Dtest.solr.allowed.securerandom=NativePRNG</argLine>
+                    <argLine>
+						-Dtest.solr.allowed.securerandom=NativePRNG
+						<!-- Needed for Java 17 compatibility. -->
+						--add-opens java.base/java.lang=ALL-UNNAMED
+					</argLine>
                 </configuration>
             </plugin>
             <plugin>
